wyseplus-drone/web/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getwell
  labels:
    app: getwell
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: getwell
  template:
    metadata:
      labels:
        app: getwell
    spec:
      containers:
        - name: getwell
          image: 290223772942.dkr.ecr.ap-south-1.amazonaws.com/getwell:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
