wyseplus-drone/web/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getwell
  labels:
    app: getwell
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: getwell
