wyseplus-drone/web/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: getwell-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - getwell.wysemeet.cf
    secretName: wyseplus-tls
  rules:
  - host: getwell.wysemeet.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: getwell
          servicePort: 80
